css word-break in workflow listing, fixes long titles

--- a/src/UI/templates/default/Listing/workflow.less
+++ b/src/UI/templates/default/Listing/workflow.less
@@ -1,4 +1,6 @@
 .il-workflow {
+	word-break: break-word;
+
 	&.linear {
 		-webkit-box-shadow: @il-panel-shadow;
 		box-shadow: @il-panel-shadow;
